# Crossplatform

./: CMakeLists.txt  Info.plist  README.md  compile.bat  compile.sh  fs_main.sh  main.cpp  sdl_bgfx_ios.h  sdl_bgfx_ios.mm  vcpkg.json  vs_main.sh
android-project/: gradle.properties  local.properties
android-project/app/: build.gradle
android-project/app/jni/: Application.mk
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
assets/: compile.bat  compile.sh  fs_main.sh  varying.def.sc
